--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
   <!--Bootstrap 4-->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link  href="style.css" rel="stylesheet"  type="text"> 
 
 
 </head>
